# entropy

./: .gitignore  API_DOC.md  README.md
entropy_hpc/: .gitignore  API_DOC.md  API_DOC.rs  Cargo.toml  IMPLEMENTATIONS.md  README.md
entropy_hpc/src/: cint.rs  display.rs  hint.rs  lib.rs  oint.rs  zint.rs
entropy_hpc/src/lattice/: d4.rs  e8.rs  mod.rs  z2.rs
entropy_hpc/src/simd/: lattice_simd.rs  mod.rs  simd_engine.rs  simd_lattice.rs
entropy_hpc/src/types/: cint.rs  display.rs  hint.rs  mod.rs  oint.rs
entropy_hpc/tests/: demo.rs
