[package]
name = "entropy_hpc"
version = "0.3.0"
edition = "2021"
authors = ["Gutkaq"]
description = "High-Performance Computing with Algebraic Numbers (Z[i], Quaternions, Octonions) + A₂/D₄/E₈ Lattice Geometry with SIMD"
license = "MIT"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[test]]
name = "demo"
path = "tests/demo.rs"
harness = true

